RESOLVED FIXED13121
REGRESSION (r18288): getting value for hidden input element fails after the fix for Bug 11866
https://bugs.webkit.org/show_bug.cgi?id=13121
Summary REGRESSION (r18288): getting value for hidden input element fails after the f...
Jake Logan
Reported 2007-03-19 15:47:02 PDT
Please see reduction below. This issue is a regression caused by http://bugs.webkit.org/show_bug.cgi?id=11866. <html> <head> <script language="javascript"> function showForm() { var frm = document.getElementById("frmChangeContent"); frm.NavigationTarget.value = "Jake"; alert(frm.innerHTML); } </script> </head> <body> <FORM action="" method=POST id="frmChangeContent" name="frmChangeContent"> <input type="hidden" id="NavigationTarget" name="NavigationTarget"> </FORM> <input type = "button" value="Show Form innerHTML" onclick = "showForm()"> </body> </html>
Attachments
Test case from Comment #0 (596 bytes, text/html)
2007-03-19 17:40 PDT, David Kilzer (:ddkilzer)
no flags
David Kilzer (:ddkilzer)
Comment 1 2007-03-19 17:40:30 PDT
Created attachment 13712 [details] Test case from Comment #0
Maciej Stachowiak
Comment 2 2007-03-20 03:19:55 PDT
Does this affect a real-world site?
David Kilzer (:ddkilzer)
Comment 3 2007-03-20 04:19:21 PDT
(In reply to comment #2) > Does this affect a real-world site? Yes, see Bug 11866 Comment #10.
Adele Peterson
Comment 4 2007-03-23 11:40:32 PDT
Committed revision 20440
Darin Adler
Comment 5 2007-03-23 12:58:12 PDT
Note You need to log in before you can comment on or make changes to this bug.