LayoutTests:

Reviewed by Darin.

        Tests for <rdar://problem/5080428> REGRESSION: getting value for hidden input element fails after the fix for Bug 11866
        http://bugs.webkit.org/show_bug.cgi?id=13121

        * fast/dom/HTMLInputElement/input-hidden-value-expected.txt: Added.
        * fast/dom/HTMLInputElement/input-hidden-value.html: Added.
        * fast/forms/input-value-expected.txt:

WebCore:

        Reviewed by Darin.

        Fix for <rdar://problem/5080428> REGRESSION: getting value for hidden input element fails after the fix for Bug 11866
        http://bugs.webkit.org/show_bug.cgi?id=13121

        Rolled out the change for 11866 that made hidden input elements store the value separately from the value attribute.
        Added an m_originalValue field that gets set when the element is done being parsed (in closeRenderer).  In reset,
        use the m_originalValue for hidden input elements.

        * html/HTMLInputElement.cpp:
        (WebCore::HTMLInputElement::closeRenderer):
        (WebCore::HTMLInputElement::reset):
        (WebCore::HTMLInputElement::setValue):
        (WebCore::HTMLInputElement::storesValueSeparateFromAttribute):
        * html/HTMLInputElement.h:



Canonical link: https://commits.webkit.org/17191@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@20440 268f45cc-cd09-0410-ab3c-d52691b4dbfc